Investigated Cox PH p-value, MI, DE correlations.

--- a/exploratory_analysis/predictive_DE_analysis.ipynb
+++ b/exploratory_analysis/predictive_DE_analysis.ipynb
@@ -92,8 +92,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -124,12 +129,20 @@
     "deg_df <- read_tsv(paste0(dirs$analysis_dir, \"/\", unified_dsets[i], \"_DESeq_results.tsv\")) %>%\n",
     "    dplyr::filter(geneID %in% matrisome_df$gene_symbol) %>%\n",
     "    dplyr::select(geneID, log2FoldChange, padj) %>%\n",
-    "    dplyr::rename(deg_l2fc = log2FoldChange, deg_padj = padj)"
+    "    dplyr::rename(deg_l2fc = log2FoldChange, deg_padj = padj)\n",
+    "mi_df <- read_tsv(paste0(dirs$analysis_dir, \"/\", unified_dsets[i], \"_MI_survival_results.tsv\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DE and Cox"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -212,15 +225,22 @@
     }
    ],
    "source": [
-    "combined_df <- coxph_df %>%\n",
+    "deg_and_coxph <- coxph_df %>%\n",
     "    inner_join(deg_df, by = \"geneID\")\n",
-    "nrow(combined_df)\n",
-    "head(combined_df)"
+    "nrow(deg_and_coxph)\n",
+    "head(deg_and_coxph)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## All genes (that are present in both - DESeq2 filters out lowly expressed genes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +249,7 @@
        "\n",
        "\tPearson's product-moment correlation\n",
        "\n",
-       "data:  combined_df$coxph_pval and combined_df$deg_padj\n",
+       "data:  deg_and_coxph$coxph_pval and deg_and_coxph$deg_padj\n",
        "t = -1.7212, df = 915, p-value = 0.08556\n",
        "alternative hypothesis: true correlation is not equal to 0\n",
        "95 percent confidence interval:\n",
@@ -244,15 +264,239 @@
     }
    ],
    "source": [
-    "cor.test(combined_df$coxph_pval, combined_df$deg_padj)"
+    "cor.test(deg_and_coxph$coxph_pval, deg_and_coxph$deg_padj)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Genes that are significant in DE & Cox PH"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sig_deg_and_coxph_df <- deg_and_coxph %>%\n",
+    "    dplyr::filter(coxph_pval < p_thresh, deg_padj < p_thresh, deg_l2fc > lfc_thresh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\tPearson's product-moment correlation\n",
+       "\n",
+       "data:  sig_deg_and_coxph_df$coxph_pval and sig_deg_and_coxph_df$deg_padj\n",
+       "t = 0.6029, df = 38, p-value = 0.5502\n",
+       "alternative hypothesis: true correlation is not equal to 0\n",
+       "95 percent confidence interval:\n",
+       " -0.2208678  0.3968158\n",
+       "sample estimates:\n",
+       "      cor \n",
+       "0.0973387 \n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "cor.test(sig_deg_and_coxph_df$coxph_pval, sig_deg_and_coxph_df$deg_padj)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# MI and Cox"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "1008"
+      ],
+      "text/latex": [
+       "1008"
+      ],
+      "text/markdown": [
+       "1008"
+      ],
+      "text/plain": [
+       "[1] 1008"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A tibble: 6 × 4</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>geneID</th><th scope=col>coxph_pval</th><th scope=col>coxph_coeff</th><th scope=col>MI_est_median</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>PGF    </td><td>0.8071582</td><td>-0.03116842</td><td>0.07156327</td></tr>\n",
+       "\t<tr><td>TIMP4  </td><td>0.2748115</td><td> 0.16072631</td><td>0.00000000</td></tr>\n",
+       "\t<tr><td>C1QTNF6</td><td>0.0280016</td><td> 0.29687324</td><td>0.12686499</td></tr>\n",
+       "\t<tr><td>TNC    </td><td>0.1069040</td><td> 0.14709662</td><td>0.00000000</td></tr>\n",
+       "\t<tr><td>PRL    </td><td>0.7570963</td><td> 0.12384552</td><td>0.00000000</td></tr>\n",
+       "\t<tr><td>OGN    </td><td>0.8446160</td><td> 0.02494448</td><td>0.00000000</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 6 × 4\n",
+       "\\begin{tabular}{llll}\n",
+       " geneID & coxph\\_pval & coxph\\_coeff & MI\\_est\\_median\\\\\n",
+       " <chr> & <dbl> & <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t PGF     & 0.8071582 & -0.03116842 & 0.07156327\\\\\n",
+       "\t TIMP4   & 0.2748115 &  0.16072631 & 0.00000000\\\\\n",
+       "\t C1QTNF6 & 0.0280016 &  0.29687324 & 0.12686499\\\\\n",
+       "\t TNC     & 0.1069040 &  0.14709662 & 0.00000000\\\\\n",
+       "\t PRL     & 0.7570963 &  0.12384552 & 0.00000000\\\\\n",
+       "\t OGN     & 0.8446160 &  0.02494448 & 0.00000000\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 6 × 4\n",
+       "\n",
+       "| geneID &lt;chr&gt; | coxph_pval &lt;dbl&gt; | coxph_coeff &lt;dbl&gt; | MI_est_median &lt;dbl&gt; |\n",
+       "|---|---|---|---|\n",
+       "| PGF     | 0.8071582 | -0.03116842 | 0.07156327 |\n",
+       "| TIMP4   | 0.2748115 |  0.16072631 | 0.00000000 |\n",
+       "| C1QTNF6 | 0.0280016 |  0.29687324 | 0.12686499 |\n",
+       "| TNC     | 0.1069040 |  0.14709662 | 0.00000000 |\n",
+       "| PRL     | 0.7570963 |  0.12384552 | 0.00000000 |\n",
+       "| OGN     | 0.8446160 |  0.02494448 | 0.00000000 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  geneID  coxph_pval coxph_coeff MI_est_median\n",
+       "1 PGF     0.8071582  -0.03116842 0.07156327   \n",
+       "2 TIMP4   0.2748115   0.16072631 0.00000000   \n",
+       "3 C1QTNF6 0.0280016   0.29687324 0.12686499   \n",
+       "4 TNC     0.1069040   0.14709662 0.00000000   \n",
+       "5 PRL     0.7570963   0.12384552 0.00000000   \n",
+       "6 OGN     0.8446160   0.02494448 0.00000000   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "mi_and_coxph_df <- coxph_df %>%\n",
+    "    inner_join(mi_df, by = \"geneID\")\n",
+    "nrow(mi_and_coxph_df)\n",
+    "head(mi_and_coxph_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## All genes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\tPearson's product-moment correlation\n",
+       "\n",
+       "data:  mi_and_coxph_df$coxph_pval and mi_and_coxph_df$MI_est_median\n",
+       "t = -1.6189, df = 1006, p-value = 0.1058\n",
+       "alternative hypothesis: true correlation is not equal to 0\n",
+       "95 percent confidence interval:\n",
+       " -0.11236877  0.01080451\n",
+       "sample estimates:\n",
+       "        cor \n",
+       "-0.05097598 \n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "cor.test(mi_and_coxph_df$coxph_pval, mi_and_coxph_df$MI_est_median)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Genes that have MI & are sig in Cox PH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sig_mi_and_coxph <- mi_and_coxph_df %>%\n",
+    "    dplyr::filter(coxph_pval < p_thresh, MI_est_median > mi_thresh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\tPearson's product-moment correlation\n",
+       "\n",
+       "data:  sig_mi_and_coxph$coxph_pval and sig_mi_and_coxph$MI_est_median\n",
+       "t = -0.28806, df = 60, p-value = 0.7743\n",
+       "alternative hypothesis: true correlation is not equal to 0\n",
+       "95 percent confidence interval:\n",
+       " -0.2842917  0.2145979\n",
+       "sample estimates:\n",
+       "        cor \n",
+       "-0.03716223 \n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "cor.test(sig_mi_and_coxph$coxph_pval,sig_mi_and_coxph$MI_est_median)"
+   ]
   }
  ],
  "metadata": {
