--- a/exploratory_analysis/predictive_DE_analysis.ipynb
+++ b/exploratory_analysis/predictive_DE_analysis.ipynb
@@ -93,12 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -119,6 +114,11 @@
       "  stat = col_double(),\n",
       "  pvalue = col_double(),\n",
       "  padj = col_double()\n",
+      ")\n",
+      "Parsed with column specification:\n",
+      "cols(\n",
+      "  geneID = col_character(),\n",
+      "  MI_est_median = col_double()\n",
       ")\n"
      ]
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -322,13 +322,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -358,12 +353,12 @@
        "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>PGF    </td><td>0.8071582</td><td>-0.03116842</td><td>0.07156327</td></tr>\n",
-       "\t<tr><td>TIMP4  </td><td>0.2748115</td><td> 0.16072631</td><td>0.00000000</td></tr>\n",
-       "\t<tr><td>C1QTNF6</td><td>0.0280016</td><td> 0.29687324</td><td>0.12686499</td></tr>\n",
-       "\t<tr><td>TNC    </td><td>0.1069040</td><td> 0.14709662</td><td>0.00000000</td></tr>\n",
-       "\t<tr><td>PRL    </td><td>0.7570963</td><td> 0.12384552</td><td>0.00000000</td></tr>\n",
-       "\t<tr><td>OGN    </td><td>0.8446160</td><td> 0.02494448</td><td>0.00000000</td></tr>\n",
+       "\t<tr><td>PGF    </td><td>0.8071582</td><td>-0.03116842</td><td>0.0000000</td></tr>\n",
+       "\t<tr><td>TIMP4  </td><td>0.2748115</td><td> 0.16072631</td><td>0.0000000</td></tr>\n",
+       "\t<tr><td>C1QTNF6</td><td>0.0280016</td><td> 0.29687324</td><td>0.1079641</td></tr>\n",
+       "\t<tr><td>TNC    </td><td>0.1069040</td><td> 0.14709662</td><td>0.0000000</td></tr>\n",
+       "\t<tr><td>PRL    </td><td>0.7570963</td><td> 0.12384552</td><td>0.0000000</td></tr>\n",
+       "\t<tr><td>OGN    </td><td>0.8446160</td><td> 0.02494448</td><td>0.0000000</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -373,12 +368,12 @@
        " geneID & coxph\\_pval & coxph\\_coeff & MI\\_est\\_median\\\\\n",
        " <chr> & <dbl> & <dbl> & <dbl>\\\\\n",
        "\\hline\n",
-       "\t PGF     & 0.8071582 & -0.03116842 & 0.07156327\\\\\n",
-       "\t TIMP4   & 0.2748115 &  0.16072631 & 0.00000000\\\\\n",
-       "\t C1QTNF6 & 0.0280016 &  0.29687324 & 0.12686499\\\\\n",
-       "\t TNC     & 0.1069040 &  0.14709662 & 0.00000000\\\\\n",
-       "\t PRL     & 0.7570963 &  0.12384552 & 0.00000000\\\\\n",
-       "\t OGN     & 0.8446160 &  0.02494448 & 0.00000000\\\\\n",
+       "\t PGF     & 0.8071582 & -0.03116842 & 0.0000000\\\\\n",
+       "\t TIMP4   & 0.2748115 &  0.16072631 & 0.0000000\\\\\n",
+       "\t C1QTNF6 & 0.0280016 &  0.29687324 & 0.1079641\\\\\n",
+       "\t TNC     & 0.1069040 &  0.14709662 & 0.0000000\\\\\n",
+       "\t PRL     & 0.7570963 &  0.12384552 & 0.0000000\\\\\n",
+       "\t OGN     & 0.8446160 &  0.02494448 & 0.0000000\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -387,22 +382,22 @@
        "\n",
        "| geneID &lt;chr&gt; | coxph_pval &lt;dbl&gt; | coxph_coeff &lt;dbl&gt; | MI_est_median &lt;dbl&gt; |\n",
        "|---|---|---|---|\n",
-       "| PGF     | 0.8071582 | -0.03116842 | 0.07156327 |\n",
-       "| TIMP4   | 0.2748115 |  0.16072631 | 0.00000000 |\n",
-       "| C1QTNF6 | 0.0280016 |  0.29687324 | 0.12686499 |\n",
-       "| TNC     | 0.1069040 |  0.14709662 | 0.00000000 |\n",
-       "| PRL     | 0.7570963 |  0.12384552 | 0.00000000 |\n",
-       "| OGN     | 0.8446160 |  0.02494448 | 0.00000000 |\n",
+       "| PGF     | 0.8071582 | -0.03116842 | 0.0000000 |\n",
+       "| TIMP4   | 0.2748115 |  0.16072631 | 0.0000000 |\n",
+       "| C1QTNF6 | 0.0280016 |  0.29687324 | 0.1079641 |\n",
+       "| TNC     | 0.1069040 |  0.14709662 | 0.0000000 |\n",
+       "| PRL     | 0.7570963 |  0.12384552 | 0.0000000 |\n",
+       "| OGN     | 0.8446160 |  0.02494448 | 0.0000000 |\n",
        "\n"
       ],
       "text/plain": [
        "  geneID  coxph_pval coxph_coeff MI_est_median\n",
-       "1 PGF     0.8071582  -0.03116842 0.07156327   \n",
-       "2 TIMP4   0.2748115   0.16072631 0.00000000   \n",
-       "3 C1QTNF6 0.0280016   0.29687324 0.12686499   \n",
-       "4 TNC     0.1069040   0.14709662 0.00000000   \n",
-       "5 PRL     0.7570963   0.12384552 0.00000000   \n",
-       "6 OGN     0.8446160   0.02494448 0.00000000   "
+       "1 PGF     0.8071582  -0.03116842 0.0000000    \n",
+       "2 TIMP4   0.2748115   0.16072631 0.0000000    \n",
+       "3 C1QTNF6 0.0280016   0.29687324 0.1079641    \n",
+       "4 TNC     0.1069040   0.14709662 0.0000000    \n",
+       "5 PRL     0.7570963   0.12384552 0.0000000    \n",
+       "6 OGN     0.8446160   0.02494448 0.0000000    "
       ]
      },
      "metadata": {},
@@ -425,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -435,13 +430,13 @@
        "\tPearson's product-moment correlation\n",
        "\n",
        "data:  mi_and_coxph_df$coxph_pval and mi_and_coxph_df$MI_est_median\n",
-       "t = -1.6189, df = 1006, p-value = 0.1058\n",
+       "t = -0.55394, df = 1006, p-value = 0.5797\n",
        "alternative hypothesis: true correlation is not equal to 0\n",
        "95 percent confidence interval:\n",
-       " -0.11236877  0.01080451\n",
+       " -0.07912319  0.04433226\n",
        "sample estimates:\n",
        "        cor \n",
-       "-0.05097598 \n"
+       "-0.01746203 \n"
       ]
      },
      "metadata": {},
@@ -461,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -481,13 +476,13 @@
        "\tPearson's product-moment correlation\n",
        "\n",
        "data:  sig_mi_and_coxph$coxph_pval and sig_mi_and_coxph$MI_est_median\n",
-       "t = -0.28806, df = 60, p-value = 0.7743\n",
+       "t = -1.6311, df = 67, p-value = 0.1076\n",
        "alternative hypothesis: true correlation is not equal to 0\n",
        "95 percent confidence interval:\n",
-       " -0.2842917  0.2145979\n",
+       " -0.4130018  0.0432578\n",
        "sample estimates:\n",
-       "        cor \n",
-       "-0.03716223 \n"
+       "       cor \n",
+       "-0.1954237 \n"
       ]
      },
      "metadata": {},
