Investigated gene correlation with survival.

--- a/exploratory_analysis/predictive_DE_analysis.ipynb
+++ b/exploratory_analysis/predictive_DE_analysis.ipynb
@@ -119,6 +119,13 @@
       "cols(\n",
       "  geneID = col_character(),\n",
       "  MI_est_median = col_double()\n",
+      ")\n",
+      "Parsed with column specification:\n",
+      "cols(\n",
+      "  geneID = col_character(),\n",
+      "  cor = col_double(),\n",
+      "  pval = col_double(),\n",
+      "  n = col_double()\n",
       ")\n"
      ]
     }
@@ -130,7 +137,9 @@
     "    dplyr::filter(geneID %in% matrisome_df$gene_symbol) %>%\n",
     "    dplyr::select(geneID, log2FoldChange, padj) %>%\n",
     "    dplyr::rename(deg_l2fc = log2FoldChange, deg_padj = padj)\n",
-    "mi_df <- read_tsv(paste0(dirs$analysis_dir, \"/\", unified_dsets[i], \"_MI_survival_results.tsv\"))"
+    "mi_df <- read_tsv(paste0(dirs$analysis_dir, \"/\", unified_dsets[i], \"_MI_survival_results.tsv\"))\n",
+    "cor_df <- read_tsv(paste0(dirs$analysis_dir, \"/\", unified_dsets[i], \"_cor_results.tsv\")) %>%\n",
+    "    dplyr::rename(cor_test_cor = cor, cor_test_pval = pval, cor_test_n = n)"
    ]
   },
   {
@@ -451,7 +460,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Genes that have MI & are sig in Cox PH"
+    "## Genes which exhibit MI & are sig in Cox PH"
    ]
   },
   {
@@ -460,7 +469,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sig_mi_and_coxph <- mi_and_coxph_df %>%\n",
+    "sig_mi_and_coxph_df <- mi_and_coxph_df %>%\n",
     "    dplyr::filter(coxph_pval < p_thresh, MI_est_median > mi_thresh)"
    ]
   },
@@ -475,7 +484,7 @@
        "\n",
        "\tPearson's product-moment correlation\n",
        "\n",
-       "data:  sig_mi_and_coxph$coxph_pval and sig_mi_and_coxph$MI_est_median\n",
+       "data:  sig_mi_and_coxph_df$coxph_pval and sig_mi_and_coxph_df$MI_est_median\n",
        "t = -1.6311, df = 67, p-value = 0.1076\n",
        "alternative hypothesis: true correlation is not equal to 0\n",
        "95 percent confidence interval:\n",
@@ -490,7 +499,187 @@
     }
    ],
    "source": [
-    "cor.test(sig_mi_and_coxph$coxph_pval,sig_mi_and_coxph$MI_est_median)"
+    "cor.test(sig_mi_and_coxph_df$coxph_pval,sig_mi_and_coxph_df$MI_est_median)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# MI and correlation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "1008"
+      ],
+      "text/latex": [
+       "1008"
+      ],
+      "text/markdown": [
+       "1008"
+      ],
+      "text/plain": [
+       "[1] 1008"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A tibble: 6 × 5</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>geneID</th><th scope=col>MI_est_median</th><th scope=col>cor_test_cor</th><th scope=col>cor_test_pval</th><th scope=col>cor_test_n</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>PGF    </td><td>0.0000000</td><td>-0.03267992</td><td>0.794485949</td><td>66</td></tr>\n",
+       "\t<tr><td>TIMP4  </td><td>0.0000000</td><td>-0.11527481</td><td>0.356694904</td><td>66</td></tr>\n",
+       "\t<tr><td>C1QTNF6</td><td>0.1079641</td><td>-0.32180744</td><td>0.008415805</td><td>66</td></tr>\n",
+       "\t<tr><td>TNC    </td><td>0.0000000</td><td> 0.03475637</td><td>0.781741120</td><td>66</td></tr>\n",
+       "\t<tr><td>PRL    </td><td>0.0000000</td><td>-0.10272623</td><td>0.411771043</td><td>66</td></tr>\n",
+       "\t<tr><td>OGN    </td><td>0.0000000</td><td> 0.16283526</td><td>0.191436111</td><td>66</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 6 × 5\n",
+       "\\begin{tabular}{lllll}\n",
+       " geneID & MI\\_est\\_median & cor\\_test\\_cor & cor\\_test\\_pval & cor\\_test\\_n\\\\\n",
+       " <chr> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t PGF     & 0.0000000 & -0.03267992 & 0.794485949 & 66\\\\\n",
+       "\t TIMP4   & 0.0000000 & -0.11527481 & 0.356694904 & 66\\\\\n",
+       "\t C1QTNF6 & 0.1079641 & -0.32180744 & 0.008415805 & 66\\\\\n",
+       "\t TNC     & 0.0000000 &  0.03475637 & 0.781741120 & 66\\\\\n",
+       "\t PRL     & 0.0000000 & -0.10272623 & 0.411771043 & 66\\\\\n",
+       "\t OGN     & 0.0000000 &  0.16283526 & 0.191436111 & 66\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 6 × 5\n",
+       "\n",
+       "| geneID &lt;chr&gt; | MI_est_median &lt;dbl&gt; | cor_test_cor &lt;dbl&gt; | cor_test_pval &lt;dbl&gt; | cor_test_n &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|\n",
+       "| PGF     | 0.0000000 | -0.03267992 | 0.794485949 | 66 |\n",
+       "| TIMP4   | 0.0000000 | -0.11527481 | 0.356694904 | 66 |\n",
+       "| C1QTNF6 | 0.1079641 | -0.32180744 | 0.008415805 | 66 |\n",
+       "| TNC     | 0.0000000 |  0.03475637 | 0.781741120 | 66 |\n",
+       "| PRL     | 0.0000000 | -0.10272623 | 0.411771043 | 66 |\n",
+       "| OGN     | 0.0000000 |  0.16283526 | 0.191436111 | 66 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  geneID  MI_est_median cor_test_cor cor_test_pval cor_test_n\n",
+       "1 PGF     0.0000000     -0.03267992  0.794485949   66        \n",
+       "2 TIMP4   0.0000000     -0.11527481  0.356694904   66        \n",
+       "3 C1QTNF6 0.1079641     -0.32180744  0.008415805   66        \n",
+       "4 TNC     0.0000000      0.03475637  0.781741120   66        \n",
+       "5 PRL     0.0000000     -0.10272623  0.411771043   66        \n",
+       "6 OGN     0.0000000      0.16283526  0.191436111   66        "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "mi_and_cor_df <- mi_df %>%\n",
+    "    inner_join(cor_df, by = \"geneID\")\n",
+    "nrow(mi_and_cor_df)\n",
+    "head(mi_and_cor_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## All genes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\tPearson's product-moment correlation\n",
+       "\n",
+       "data:  mi_and_cor_df$MI_est_median and mi_and_cor_df$cor_test_pval\n",
+       "t = -4.7528, df = 997, p-value = 2.301e-06\n",
+       "alternative hypothesis: true correlation is not equal to 0\n",
+       "95 percent confidence interval:\n",
+       " -0.20894064 -0.08763035\n",
+       "sample estimates:\n",
+       "       cor \n",
+       "-0.1488455 \n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "cor.test(mi_and_cor_df$MI_est_median, mi_and_cor_df$cor_test_pval)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Genes which exhibit MI & are sig. corr. with survival"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sig_mi_and_cor_df <- mi_and_cor_df %>%\n",
+    "    dplyr::filter(MI_est_median > mi_thresh, cor_test_pval < p_thresh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\tPearson's product-moment correlation\n",
+       "\n",
+       "data:  sig_mi_and_cor_df$MI_est_median and sig_mi_and_cor_df$cor_test_pval\n",
+       "t = -0.82641, df = 61, p-value = 0.4118\n",
+       "alternative hypothesis: true correlation is not equal to 0\n",
+       "95 percent confidence interval:\n",
+       " -0.3440201  0.1463567\n",
+       "sample estimates:\n",
+       "      cor \n",
+       "-0.105224 \n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "cor.test(sig_mi_and_cor_df$MI_est_median, sig_mi_and_cor_df$cor_test_pval)"
    ]
   }
  ],
