Started working on PLSR & also made more library functions.

--- a/exploratory_analysis/predictive_DE_analysis.ipynb
+++ b/exploratory_analysis/predictive_DE_analysis.ipynb
@@ -182,12 +182,12 @@
        "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>PGF    </td><td>0.8071582</td><td>-0.03116842</td><td>-0.00558361</td><td>9.919896e-01</td></tr>\n",
-       "\t<tr><td>TIMP4  </td><td>0.2748115</td><td> 0.16072631</td><td>-4.45396269</td><td>5.769052e-12</td></tr>\n",
-       "\t<tr><td>C1QTNF6</td><td>0.0280016</td><td> 0.29687324</td><td> 0.46855664</td><td>2.090489e-01</td></tr>\n",
-       "\t<tr><td>TNC    </td><td>0.1069040</td><td> 0.14709662</td><td> 0.43931731</td><td>4.140684e-01</td></tr>\n",
-       "\t<tr><td>PRL    </td><td>0.7570963</td><td> 0.12384552</td><td>-3.27230838</td><td>1.246596e-03</td></tr>\n",
-       "\t<tr><td>OGN    </td><td>0.8446160</td><td> 0.02494448</td><td>-6.39269858</td><td>3.630674e-16</td></tr>\n",
+       "\t<tr><td>PGF    </td><td>0.54425160</td><td> 0.062918777</td><td>-0.00558361</td><td>9.919896e-01</td></tr>\n",
+       "\t<tr><td>TIMP4  </td><td>0.21721965</td><td> 0.161809921</td><td>-4.45396269</td><td>5.769052e-12</td></tr>\n",
+       "\t<tr><td>C1QTNF6</td><td>0.01685799</td><td> 0.273679674</td><td> 0.46855664</td><td>2.090489e-01</td></tr>\n",
+       "\t<tr><td>TNC    </td><td>0.01755491</td><td> 0.181345111</td><td> 0.43931731</td><td>4.140684e-01</td></tr>\n",
+       "\t<tr><td>PRL    </td><td>0.20689399</td><td> 0.367487825</td><td>-3.27230838</td><td>1.246596e-03</td></tr>\n",
+       "\t<tr><td>OGN    </td><td>0.93805902</td><td>-0.008228786</td><td>-6.39269858</td><td>3.630674e-16</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -197,12 +197,12 @@
        " geneID & coxph\\_pval & coxph\\_coeff & deg\\_l2fc & deg\\_padj\\\\\n",
        " <chr> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
        "\\hline\n",
-       "\t PGF     & 0.8071582 & -0.03116842 & -0.00558361 & 9.919896e-01\\\\\n",
-       "\t TIMP4   & 0.2748115 &  0.16072631 & -4.45396269 & 5.769052e-12\\\\\n",
-       "\t C1QTNF6 & 0.0280016 &  0.29687324 &  0.46855664 & 2.090489e-01\\\\\n",
-       "\t TNC     & 0.1069040 &  0.14709662 &  0.43931731 & 4.140684e-01\\\\\n",
-       "\t PRL     & 0.7570963 &  0.12384552 & -3.27230838 & 1.246596e-03\\\\\n",
-       "\t OGN     & 0.8446160 &  0.02494448 & -6.39269858 & 3.630674e-16\\\\\n",
+       "\t PGF     & 0.54425160 &  0.062918777 & -0.00558361 & 9.919896e-01\\\\\n",
+       "\t TIMP4   & 0.21721965 &  0.161809921 & -4.45396269 & 5.769052e-12\\\\\n",
+       "\t C1QTNF6 & 0.01685799 &  0.273679674 &  0.46855664 & 2.090489e-01\\\\\n",
+       "\t TNC     & 0.01755491 &  0.181345111 &  0.43931731 & 4.140684e-01\\\\\n",
+       "\t PRL     & 0.20689399 &  0.367487825 & -3.27230838 & 1.246596e-03\\\\\n",
+       "\t OGN     & 0.93805902 & -0.008228786 & -6.39269858 & 3.630674e-16\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -211,22 +211,22 @@
        "\n",
        "| geneID &lt;chr&gt; | coxph_pval &lt;dbl&gt; | coxph_coeff &lt;dbl&gt; | deg_l2fc &lt;dbl&gt; | deg_padj &lt;dbl&gt; |\n",
        "|---|---|---|---|---|\n",
-       "| PGF     | 0.8071582 | -0.03116842 | -0.00558361 | 9.919896e-01 |\n",
-       "| TIMP4   | 0.2748115 |  0.16072631 | -4.45396269 | 5.769052e-12 |\n",
-       "| C1QTNF6 | 0.0280016 |  0.29687324 |  0.46855664 | 2.090489e-01 |\n",
-       "| TNC     | 0.1069040 |  0.14709662 |  0.43931731 | 4.140684e-01 |\n",
-       "| PRL     | 0.7570963 |  0.12384552 | -3.27230838 | 1.246596e-03 |\n",
-       "| OGN     | 0.8446160 |  0.02494448 | -6.39269858 | 3.630674e-16 |\n",
+       "| PGF     | 0.54425160 |  0.062918777 | -0.00558361 | 9.919896e-01 |\n",
+       "| TIMP4   | 0.21721965 |  0.161809921 | -4.45396269 | 5.769052e-12 |\n",
+       "| C1QTNF6 | 0.01685799 |  0.273679674 |  0.46855664 | 2.090489e-01 |\n",
+       "| TNC     | 0.01755491 |  0.181345111 |  0.43931731 | 4.140684e-01 |\n",
+       "| PRL     | 0.20689399 |  0.367487825 | -3.27230838 | 1.246596e-03 |\n",
+       "| OGN     | 0.93805902 | -0.008228786 | -6.39269858 | 3.630674e-16 |\n",
        "\n"
       ],
       "text/plain": [
-       "  geneID  coxph_pval coxph_coeff deg_l2fc    deg_padj    \n",
-       "1 PGF     0.8071582  -0.03116842 -0.00558361 9.919896e-01\n",
-       "2 TIMP4   0.2748115   0.16072631 -4.45396269 5.769052e-12\n",
-       "3 C1QTNF6 0.0280016   0.29687324  0.46855664 2.090489e-01\n",
-       "4 TNC     0.1069040   0.14709662  0.43931731 4.140684e-01\n",
-       "5 PRL     0.7570963   0.12384552 -3.27230838 1.246596e-03\n",
-       "6 OGN     0.8446160   0.02494448 -6.39269858 3.630674e-16"
+       "  geneID  coxph_pval coxph_coeff  deg_l2fc    deg_padj    \n",
+       "1 PGF     0.54425160  0.062918777 -0.00558361 9.919896e-01\n",
+       "2 TIMP4   0.21721965  0.161809921 -4.45396269 5.769052e-12\n",
+       "3 C1QTNF6 0.01685799  0.273679674  0.46855664 2.090489e-01\n",
+       "4 TNC     0.01755491  0.181345111  0.43931731 4.140684e-01\n",
+       "5 PRL     0.20689399  0.367487825 -3.27230838 1.246596e-03\n",
+       "6 OGN     0.93805902 -0.008228786 -6.39269858 3.630674e-16"
       ]
      },
      "metadata": {},
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -259,13 +259,13 @@
        "\tPearson's product-moment correlation\n",
        "\n",
        "data:  deg_and_coxph$coxph_pval and deg_and_coxph$deg_padj\n",
-       "t = -1.7212, df = 915, p-value = 0.08556\n",
+       "t = -1.1776, df = 915, p-value = 0.2393\n",
        "alternative hypothesis: true correlation is not equal to 0\n",
        "95 percent confidence interval:\n",
-       " -0.121102417  0.007959822\n",
+       " -0.10338037  0.02590285\n",
        "sample estimates:\n",
        "        cor \n",
-       "-0.05680863 \n"
+       "-0.03890156 \n"
       ]
      },
      "metadata": {},
@@ -280,38 +280,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Genes that are significant in DE & Cox PH"
+    "## What is the size of overlap?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sig_deg_and_coxph_df <- deg_and_coxph %>%\n",
-    "    dplyr::filter(coxph_pval < p_thresh, deg_padj < p_thresh, deg_l2fc > lfc_thresh)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "46"
+      ],
+      "text/latex": [
+       "46"
+      ],
+      "text/markdown": [
+       "46"
+      ],
       "text/plain": [
-       "\n",
-       "\tPearson's product-moment correlation\n",
-       "\n",
-       "data:  sig_deg_and_coxph_df$coxph_pval and sig_deg_and_coxph_df$deg_padj\n",
-       "t = 0.6029, df = 38, p-value = 0.5502\n",
-       "alternative hypothesis: true correlation is not equal to 0\n",
-       "95 percent confidence interval:\n",
-       " -0.2208678  0.3968158\n",
-       "sample estimates:\n",
-       "      cor \n",
-       "0.0973387 \n"
+       "[1] 46"
       ]
      },
      "metadata": {},
@@ -319,7 +308,8 @@
     }
    ],
    "source": [
-    "cor.test(sig_deg_and_coxph_df$coxph_pval, sig_deg_and_coxph_df$deg_padj)"
+    "nrow(deg_and_coxph %>%\n",
+    "    dplyr::filter(coxph_pval < p_thresh, deg_padj < p_thresh, deg_l2fc > lfc_thresh))"
    ]
   },
   {
@@ -331,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -362,12 +352,12 @@
        "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>PGF    </td><td>0.8071582</td><td>-0.03116842</td><td>0.0000000</td></tr>\n",
-       "\t<tr><td>TIMP4  </td><td>0.2748115</td><td> 0.16072631</td><td>0.0000000</td></tr>\n",
-       "\t<tr><td>C1QTNF6</td><td>0.0280016</td><td> 0.29687324</td><td>0.1079641</td></tr>\n",
-       "\t<tr><td>TNC    </td><td>0.1069040</td><td> 0.14709662</td><td>0.0000000</td></tr>\n",
-       "\t<tr><td>PRL    </td><td>0.7570963</td><td> 0.12384552</td><td>0.0000000</td></tr>\n",
-       "\t<tr><td>OGN    </td><td>0.8446160</td><td> 0.02494448</td><td>0.0000000</td></tr>\n",
+       "\t<tr><td>PGF    </td><td>0.54425160</td><td> 0.062918777</td><td>0.0000000</td></tr>\n",
+       "\t<tr><td>TIMP4  </td><td>0.21721965</td><td> 0.161809921</td><td>0.0000000</td></tr>\n",
+       "\t<tr><td>C1QTNF6</td><td>0.01685799</td><td> 0.273679674</td><td>0.1079641</td></tr>\n",
+       "\t<tr><td>TNC    </td><td>0.01755491</td><td> 0.181345111</td><td>0.0000000</td></tr>\n",
+       "\t<tr><td>PRL    </td><td>0.20689399</td><td> 0.367487825</td><td>0.0000000</td></tr>\n",
+       "\t<tr><td>OGN    </td><td>0.93805902</td><td>-0.008228786</td><td>0.0000000</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -377,12 +367,12 @@
        " geneID & coxph\\_pval & coxph\\_coeff & MI\\_est\\_median\\\\\n",
        " <chr> & <dbl> & <dbl> & <dbl>\\\\\n",
        "\\hline\n",
-       "\t PGF     & 0.8071582 & -0.03116842 & 0.0000000\\\\\n",
-       "\t TIMP4   & 0.2748115 &  0.16072631 & 0.0000000\\\\\n",
-       "\t C1QTNF6 & 0.0280016 &  0.29687324 & 0.1079641\\\\\n",
-       "\t TNC     & 0.1069040 &  0.14709662 & 0.0000000\\\\\n",
-       "\t PRL     & 0.7570963 &  0.12384552 & 0.0000000\\\\\n",
-       "\t OGN     & 0.8446160 &  0.02494448 & 0.0000000\\\\\n",
+       "\t PGF     & 0.54425160 &  0.062918777 & 0.0000000\\\\\n",
+       "\t TIMP4   & 0.21721965 &  0.161809921 & 0.0000000\\\\\n",
+       "\t C1QTNF6 & 0.01685799 &  0.273679674 & 0.1079641\\\\\n",
+       "\t TNC     & 0.01755491 &  0.181345111 & 0.0000000\\\\\n",
+       "\t PRL     & 0.20689399 &  0.367487825 & 0.0000000\\\\\n",
+       "\t OGN     & 0.93805902 & -0.008228786 & 0.0000000\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -391,22 +381,22 @@
        "\n",
        "| geneID &lt;chr&gt; | coxph_pval &lt;dbl&gt; | coxph_coeff &lt;dbl&gt; | MI_est_median &lt;dbl&gt; |\n",
        "|---|---|---|---|\n",
-       "| PGF     | 0.8071582 | -0.03116842 | 0.0000000 |\n",
-       "| TIMP4   | 0.2748115 |  0.16072631 | 0.0000000 |\n",
-       "| C1QTNF6 | 0.0280016 |  0.29687324 | 0.1079641 |\n",
-       "| TNC     | 0.1069040 |  0.14709662 | 0.0000000 |\n",
-       "| PRL     | 0.7570963 |  0.12384552 | 0.0000000 |\n",
-       "| OGN     | 0.8446160 |  0.02494448 | 0.0000000 |\n",
+       "| PGF     | 0.54425160 |  0.062918777 | 0.0000000 |\n",
+       "| TIMP4   | 0.21721965 |  0.161809921 | 0.0000000 |\n",
+       "| C1QTNF6 | 0.01685799 |  0.273679674 | 0.1079641 |\n",
+       "| TNC     | 0.01755491 |  0.181345111 | 0.0000000 |\n",
+       "| PRL     | 0.20689399 |  0.367487825 | 0.0000000 |\n",
+       "| OGN     | 0.93805902 | -0.008228786 | 0.0000000 |\n",
        "\n"
       ],
       "text/plain": [
-       "  geneID  coxph_pval coxph_coeff MI_est_median\n",
-       "1 PGF     0.8071582  -0.03116842 0.0000000    \n",
-       "2 TIMP4   0.2748115   0.16072631 0.0000000    \n",
-       "3 C1QTNF6 0.0280016   0.29687324 0.1079641    \n",
-       "4 TNC     0.1069040   0.14709662 0.0000000    \n",
-       "5 PRL     0.7570963   0.12384552 0.0000000    \n",
-       "6 OGN     0.8446160   0.02494448 0.0000000    "
+       "  geneID  coxph_pval coxph_coeff  MI_est_median\n",
+       "1 PGF     0.54425160  0.062918777 0.0000000    \n",
+       "2 TIMP4   0.21721965  0.161809921 0.0000000    \n",
+       "3 C1QTNF6 0.01685799  0.273679674 0.1079641    \n",
+       "4 TNC     0.01755491  0.181345111 0.0000000    \n",
+       "5 PRL     0.20689399  0.367487825 0.0000000    \n",
+       "6 OGN     0.93805902 -0.008228786 0.0000000    "
       ]
      },
      "metadata": {},
@@ -429,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -439,13 +429,13 @@
        "\tPearson's product-moment correlation\n",
        "\n",
        "data:  mi_and_coxph_df$coxph_pval and mi_and_coxph_df$MI_est_median\n",
-       "t = -0.55394, df = 1006, p-value = 0.5797\n",
+       "t = -1.9059, df = 1006, p-value = 0.05695\n",
        "alternative hypothesis: true correlation is not equal to 0\n",
        "95 percent confidence interval:\n",
-       " -0.07912319  0.04433226\n",
+       " -0.12127807  0.00177229\n",
        "sample estimates:\n",
        "        cor \n",
-       "-0.01746203 \n"
+       "-0.05998076 \n"
       ]
      },
      "metadata": {},
@@ -460,58 +450,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Genes which exhibit MI & are sig in Cox PH"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sig_mi_and_coxph_df <- mi_and_coxph_df %>%\n",
-    "    dplyr::filter(coxph_pval < p_thresh, MI_est_median > mi_thresh)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       "\tPearson's product-moment correlation\n",
-       "\n",
-       "data:  sig_mi_and_coxph_df$coxph_pval and sig_mi_and_coxph_df$MI_est_median\n",
-       "t = -1.6311, df = 67, p-value = 0.1076\n",
-       "alternative hypothesis: true correlation is not equal to 0\n",
-       "95 percent confidence interval:\n",
-       " -0.4130018  0.0432578\n",
-       "sample estimates:\n",
-       "       cor \n",
-       "-0.1954237 \n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "cor.test(sig_mi_and_coxph_df$coxph_pval,sig_mi_and_coxph_df$MI_est_median)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# MI and correlation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -634,52 +578,6 @@
    ],
    "source": [
     "cor.test(mi_and_cor_df$MI_est_median, mi_and_cor_df$cor_test_pval)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Genes which exhibit MI & are sig. corr. with survival"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sig_mi_and_cor_df <- mi_and_cor_df %>%\n",
-    "    dplyr::filter(MI_est_median > mi_thresh, cor_test_pval < p_thresh)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       "\tPearson's product-moment correlation\n",
-       "\n",
-       "data:  sig_mi_and_cor_df$MI_est_median and sig_mi_and_cor_df$cor_test_pval\n",
-       "t = -0.82641, df = 61, p-value = 0.4118\n",
-       "alternative hypothesis: true correlation is not equal to 0\n",
-       "95 percent confidence interval:\n",
-       " -0.3440201  0.1463567\n",
-       "sample estimates:\n",
-       "      cor \n",
-       "-0.105224 \n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "cor.test(sig_mi_and_cor_df$MI_est_median, sig_mi_and_cor_df$cor_test_pval)"
    ]
   }
  ],
