--- a/feature_selection_analysis/feature_permutation.ipynb
+++ b/feature_selection_analysis/feature_permutation.ipynb
@@ -47,12 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "matrisome_df = prep.load_matrisome_df(matrisome_list)\n",
-    "sig_deg_df = pd.read_csv(f\"{dirs.analysis_dir}/{unified_dsets[i]}_sig_DESeq_results_xref_matrisome.tsv\", sep = '\\t')\n",
-    "matrisome_sig_deg_df = (\n",
-    "    sig_deg_df.query(\"in_matrisome == True\")\n",
-    "        .reset_index(drop=True)\n",
-    ")"
+    "matrisome_df = prep.load_matrisome_df(matrisome_list)"
    ]
   },
   {
