Experimented with PLSR, but not sure how to interpret results.

--- a/feature_selection_analysis/coxph.ipynb
+++ b/feature_selection_analysis/coxph.ipynb
@@ -25,6 +25,7 @@
     "library(tidyverse)\n",
     "library(survival)\n",
     "library(survminer)\n",
+    "library(ggplot2)\n",
     "\n",
     "# Custom package\n",
     "library(rutils)"
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
